<resources>
    <string name="app_name">Job</string>
    <string name="action_settings">Settings</string>
    <string name="findperson">خىزمەتچى ئىزدەيمەن</string>
    <string name="findjob">خىزمەت ئىزدەيمەن</string>
    <string name="alljob"> ھەممە خىزمەت</string>
    <string name="finsh">سەنەمجان</string>
    <string name="resume_manage">تەرجىمھال باشقۇرۇش</string>
    <string name="recruitment_info">خىزمەت ئۇچۇرى</string>
    <string name="setting">تەڭشەش</string>
    <string name="back_login">چېكىنىش</string>
    <string name="about">ھەققىدە</string>
    <string name="search">ئىزدەش</string>
    <string name="clear_cache">قالدۇق تازىلاش مۇۋەپپەقىيەتلىك بولدى</string>


    <string name="account">ھېسابات نومۇرى</string>
    <string name="phone_number">تېلېفون نومۇرى</string>
    <string name="reset_password">مەخپىيى شىفىرنى ئۆزگەرتىش</string>
    <string name="help">ياردەم</string>
    <string name="we_chat">ئۈندىدار</string>
    <string name="bundle">باغلاش</string>
    <string name="bundled">باغلىنىپ بولدى</string>
    <string name="commit">مۇقىملاش</string>
    <string name="school_name">مەكتەپ نامى</string>
    <string name="major">كەسىپ</string>
    <string name="graduate_time">ئوقۇش پۈتتۈرگەن ۋاقىت</string>
    <string name="extra">قوشۇمچە ئۇچۇر</string>
    <string name="release_recruitment">خىزمەت ئۇچۇرى يوللاش</string>
    <string name="release_resume">تەرجىمىھال يوللاش</string>
    <string name="findjob_content">خىزمەت ئىزدەش</string>
    <string name="organize_name">ئورگان نامى</string>
    <string name="area">رايونى</string>
    <string name="organize_detail">ئورگان چۈشەندۈرۈلىشى</string>
    <string name="company_name">شىركەت نامى</string>
    <string name="recruitment_name">خىزمىتى</string>
    <string name="working_time">خىزمەت ئۆتۈگەن ۋاقتى</string>
    <string name="organize_info">ئورگان ئۇچۇرى</string>
    <string name="recruitment_record">خىزمەت خاتىرىسى</string>
    <string name="varify_code">دەلىللەش نومۇرى</string>
    <string name="salary">مۇئاشى</string>
    <string name="recruitment_describe">خىزمەت چۈشەندۈرۈلىشى</string>
    <string name="release">يوللاش</string>
    <string name="name">ئىسمى</string>
    <string name="sex">جىنسى</string>
    <string name="birth_date">تۇغۇلغان يىلى</string>
    <string name="degree">ئوقۇش تارىخى</string>
    <string name="work_experience">خىزمەت تەجىربىسى</string>
    <string name="self_describtion">ئۆزىنى باھالاش</string>
    <string name="job_intention">خىزمەت ئىستىكى</string>
    <string name="intent_salary">مۇئاشى</string>
    <string name="intent_recruitment">خىزمىتى</string>
    <string name="job_area">خىزمەت ئورنى</string>
    <string name="integrity">تولۇقلۇق دەرىجىسى</string>
    <string name="basic_info">ئاساسلىق ئۇچۇر</string>
    <string name="complete">تولۇق</string>
    <string name="recent_work">يېقىنقى خىزمىتى</string>
    <string name="disfillout">تولدۇرمىغان</string>
    <string name="open_resume">تەرجىمھالىمنى ئاشكارلايمەن</string>
    <string name="resume_record">خىزمەت ئىزدەش خاتىرىسى</string>
    <string name="system_language">سىستېما تىلى</string>
    <string name="clean_cache">قالدۇق تازلاش</string>
    <string name="check_update">يېڭى نەشىرىنى تەكشۈرۈش</string>
    <string name="share_friend">دوستلارغا ھەمبەھىرلەش</string>
    <string name="app_evaluate">ئەپ دېتالىغا باھا بېرىش</string>
    <string name="advice_feedback">تەكلىپ-پىكىر</string>

    <string name="please_input_phone_num">تېلېفون نۇمۇرىنى كىرگۈزۈڭ</string>
    <string name="please_input_password">مەخپىي نۇمۇرىنى كىرگۈزۈڭ</string>
    <string name="login">كىرىش</string>
    <string name="forgot_pwd">مەخپىي نۇمۇرنى ئۇنتۇپسىزمۇ؟</string>
    <string name="login_with_other_account">باشقا ئۇسۇل بىلەن كىرىش</string>]
    <string name="message_text_login_empty_username">تېلېفون نومۇرى بوش قالدى</string>
    <string name="login_message_text_login_error_username_format">تېلېفون نومۇرىنىڭ فورماتى خاتا، توغرا كىرگۈزۈڭ</string>
    <string name="message_text_login_empty_password">مەخپىي نۇمۇر بوش قالدى</string>
    <string name="message_text_login_error_password_length">مەخپىي نۇمۇر 6 ھەرپتىن 16 ھەرپ ئارلىقىدا بولىدۇ</string>
    <string name="login_message_text_login_error_password">مەخپىي نۇمۇر خاتا، توغرا كىرگۈزۈڭ</string>
    <string name="login_message_text_login_error_username_not_exist">تېلېفون نومۇرى تىزىملىتىلمىغان، تىزىملىتىڭ</string>
    <string name="user_be_locked">تېلېفون نۇمۇر قۇلۇپلىنىپ قالدى</string>
    <string name="network_error">تور ئۇلىنىشى بىنورمال</string>
    <string name="already_login">كىرىپ بوپسىز</string>
    <string name="errcode_unknown">نامەلۇم خاتالىق كۆرۈلدى</string>
    <string name="please_input_passord_again">مەخپىي نۇمۇرىنى قايتا كىرگۈزۈڭ</string>
    <string name="get">ئېرىشىش</string>
    <string name="please_input_varify_code">تەستىق نۇمۇرىنى كىرگۈزۈڭ</string>
    <string name="register_text">تىزىملىتىش</string>
    <string name="message_text_login_error_password_again">ئىككى قېتىمقى مەخپىي نۇمۇر بىردەك ئەمەس، توغرا كىرگۈزۈڭ</string>
    <string name="varify_code_not_empty">تەستىق نۇمۇرى بوش قالدى</string>
    <string name="register_message_text_login_error_user_conflict">بۇ نومۇر تىزىملىتىلىپ بولۇنغان</string>
    <string name="register_message_text_login_error_verifycode">تەستىق نۇمۇرى خاتا ،قايتا كىرگۈزۈڭ</string>
    <string name="reset_">قايتۇرۋېلىش</string>
    <string name="please_input_old_password">ئەسلى مەخپىي نۇمۇرنى كىرگۈزۈڭ</string>
    <string name="please_input_new_password">يېڭى مەخپىي نۇمۇرىنى كىرگۈزۈڭ</string>
    <string name="please_input_new_password_again">يېڭى مەخپىي نۇمۇرىنى كىرگۈزۈڭ</string>
    <string name="save">ساقلاش</string>
    <string name="old_password_cannot_empty">كونا مەخپىي نۇمۇر بوش قالدى</string>
    <string name="edit_password_messgae_faild_confirm_password">يېڭى مەخپىي نۇمۇر بىردەك ئەمەس</string>
    <string name="old_password_error">ئەسلى مەخپىي نۇمۇر خاتا</string>
    <string name="reset_password_succeed_please_login_again">! مەخپىي نۇمۇرىنى قايتۇرۋېلىش مۇۋەپپىقىيەتلىك بولدى ،قايتىپ كىرىڭ </string>
    <string name="current_version">ھازىرقى نەشرى $‏</string>
    <string name="find_password">مەخپىيى نومۇرنى قايتۇرۇش</string>
    <string name="login_success">كىرىش مۇۋەپپەقىيەتلىك بولدى</string>
    <string name="me">مەن</string>
    <string name="release_success">يوللاش مۇۋەپپەقىيەتلىك بولدى  </string>
    <string name="please_input_organize_name">ئورگان نامىنى كىرگۈزۈڭ</string>
    <string name="organize_name_format_error">ئورگان نامىنىڭ فورماتىدا خاتالىق كۆرۈلدى</string>
    <string name="please_input_company_name">شىركەت نامىنى كىرگۈزۈڭ</string>
    <string name="company_name_format_error">شىركەت نامىدا خاتالىق كۆرۈلدى</string>
    <string name="extra_format">قوشۇمچە ئۇچۇرنى تولۇق كىرگۈزۈڭ</string>
    <string name="recruitment_manager">خىزمەت باشقۇرۇش</string>
    <string name="register_success">تىزىملىتىش مۇۋەپپەقىيەتلىك بولدى</string>
    <string name="please_input_career">خىزمەت ئۇچۇرى كىرگۈزۈڭ</string>
    <string name="please_input_name">ئىسمىڭىزنى كىرزۈڭ</string>
    <string name="please_input_right_name">توغرا ئىسىمنى كىرگۈزۈڭ</string>
    <string name="resume">تەرجىمھال</string>
    <string name="select_date">ۋاقىتنى تاللاڭ</string>
    <string name="select_degree">ئوقۇش تارىخىنى تاللاڭ</string>
    <string name="select_area">خىزمەت ئورنىنى تاللاڭ</string>
    <string name="select_salary">مۇئاشنى تاللاڭ</string>
    <string name="select_sex">جىنىسنى تاللاڭ</string>
    <string name="select_workexperience">خىزمەت تەجىربىسىنى تاللاڭ</string>
    <string name="please_input_time"> خىزمەت ئۆتۈگەن ۋاقىتنى كىرگۈزۈڭ</string>
    <string name="please_input_extra">قوشۇمچە ئۇچۇرنى كىرگۈزۈڭ</string>
    <string name="please_input_scholl_name">مەكتەپ نامىنى كىرگۈزۈڭ</string>
    <string name="school_name_format_error">مەكتەپ نامىنىڭ فورماتىدا خاتالىق كۆرۈلدى</string>
    <string name="please_input_major">كەسىپنى تاللاڭ</string>
    <string name="please_input_graduate_time">مەكتەپ پۈتتۈرگەن ۋاقىتنى تاللاڭ</string>
    <string name="please_input_salary">مۇئاشنى تاللاڭ</string>




    <string name="pickerview_cancel">بىكار قىلىش</string>
    <string name="pickerview_submit">مۇقىملاش</string>
    <string name="pickerview_year">يىل</string>
    <string name="pickerview_month">ئاي</string>
    <string name="pickerview_day">كۈن</string>
    <string name="pickerview_hours">سائەت</string>
    <string name="pickerview_minutes">مىنۇت</string>
    <string name="pickerview_seconds">سىكۇنت</string>
</resources>
