<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/top_title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_picture"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:src="@drawable/user_icon" />

            <erqal.mylibrary.widget.UEditText
                android:id="@+id/person_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/default_edittext_btn"
                android:digits="abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:gravity="right|center_vertical"
                android:hint="@string/name"
                android:maxLength="32"
                android:padding="15dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UTextView
                android:id="@+id/sex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:padding="15dp"
                android:text="@string/sex"
                android:textColor="@color/lightgray"
                android:textSize="14dp" />


            <erqal.mylibrary.widget.UTextView
                android:id="@+id/birth_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:padding="15dp"
                android:text="@string/birth_date"
                android:textColor="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UTextView
                android:id="@+id/degree"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:padding="15dp"
                android:text="@string/degree"
                android:textColor="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UTextView
                android:id="@+id/work_experience"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:padding="15dp"
                android:text="@string/work_experience"
                android:textColor="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UEditText
                android:id="@+id/phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:gravity="right|center_vertical"
                android:hint="@string/phone_number"
                android:padding="15dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UEditText
                android:id="@+id/introduce_myself"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:gravity="right|center_vertical"
                android:hint="@string/self_describtion"
                android:maxLength="2000"
                android:padding="15dp"
                android:textColorHint="@color/lightgray"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="16dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/lightgray" />

                <erqal.mylibrary.widget.UTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/job_intention"
                    android:textColor="@color/lightgray"
                    android:textSize="14dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/lightgray" />
            </LinearLayout>

            <erqal.mylibrary.widget.UTextView
                android:id="@+id/salary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:padding="15dp"
                android:text="@string/intent_salary"
                android:textColor="@color/lightgray"
                android:textSize="14dp" />

            <erqal.job.widget.UAutoCompleteTextView
                android:id="@+id/desire_occupation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/default_edittext_btn"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:hint="@string/intent_recruitment"
                android:imeOptions="actionSearch"
                android:padding="15dp"
                android:textColorHint="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UTextView
                android:id="@+id/job_search_area"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:padding="15dp"
                android:text="@string/job_area"
                android:textColor="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UButton
                android:id="@+id/publish"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_blue"
                android:text="@string/release"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>