<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/top_title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <erqal.job.widget.UAutoCompleteTextView
                android:id="@+id/career"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/default_edittext_btn"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:hint="@string/recruitment_name"
                android:imeOptions="actionSearch"
                android:padding="15dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UTextView
                android:id="@+id/area"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:padding="15dp"
                android:text="@string/area"
                android:textColor="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UTextView
                android:id="@+id/salary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:clickable="true"
                android:gravity="right|center_vertical"
                android:padding="15dp"
                android:text="@string/salary"
                android:textColor="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UEditText
                android:id="@+id/phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:gravity="right|center_vertical"
                android:hint="@string/phone_number"
                android:padding="15dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray"
                android:textSize="14dp" />

            <erqal.mylibrary.widget.UEditText
                android:id="@+id/introduce_career"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_edittext_btn"
                android:gravity="right|center_vertical"
                android:hint="@string/recruitment_describe"
                android:maxLength="2000"
                android:padding="15dp"
                android:textColorHint="@color/lightgray"
                android:textSize="14dp" />


            <erqal.mylibrary.widget.UButton
                android:id="@+id/publish"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_blue"
                android:text="@string/release"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>